--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>마이크 사용을 허가해주세요.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라 사용을 허가해주세요.</string>
 </dict>
 </plist>
